@@ -38,6 +38,7 @@ std::string ConvertValue(common::ZSetValue* zset, const std::string& delimiter, 
 std::string ConvertValue(common::HashValue* hash, const std::string& delimiter, bool for_cmd);
 std::string ConvertValue(common::FundamentalValue* value, const std::string& delimiter, bool for_cmd);
 std::string ConvertValue(common::StringValue* value, const std::string& delimiter, bool for_cmd);
+std::string ConvertValue(common::JsonValue* value, const std::string& delimiter, bool for_cmd);
 std::string ConvertValue(common::ByteArrayValue* value, const std::string& delimiter, bool for_cmd);
 
 std::string ConvertToHumanReadable(common::Value* value, const std::string& delimiter = std::string());
