@@ -1,6 +1,7 @@
 1.11.0 /
 [Alexandr Topilski]
 - EULA dialog
+- [Redis] Full support JSON.GET/JSON.SET commands
 
 1.10.0 / November 4, 2017
 [Alexandr Topilski]
